# openai-crewai-acp

./: README.md  a&r_feedback.md  acp_client.py  main.py  pyproject.toml  requirements.txt
crewai_agent_server/: acp_crew.py  pyproject.toml
openai_agent_server/: artist_repertoire_agent.py  json_response.md  pyproject.toml
